--- a/transition2-challenge.html
+++ b/transition2-challenge.html
@@ -5,6 +5,8 @@
   <link rel="stylesheet" type="text/css" href="css/transition2-challenge.css">
 </head>
 <body>
-  <div class="box"><img src="https://placebear.com/cache/145-201.jpg" alt=""></div>
+ 
+      <img src="https://placebear.com/cache/145-201.jpg" alt="">
+  
 </body>
 </html>
